--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     Made With Love❤️ in Egypt.<br>
     Noha Ghoweil 💞
   </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="index.js"></script>
 </body>
 
